<resources>
    <string name="app_name">WGU Mobile App</string>
    <string name="set_alerts_for_start_and_end_dates">Set alerts for start and end dates</string>
    <string name="assessment_name">Assessment Name</string>
    <string name="assessment_name2">Assessment name</string>
    <string name="type">Type</string>
    <string name="start_date">Start Date</string>
    <string name="select_start_date">Select start date</string>
    <string name="end_date">End Date</string>
    <string name="select_end_date">Select end date</string>
    <string name="add">Add</string>
    <string name="alerts">Alerts</string>
    <string name="course_name">Course Name</string>
    <string name="course_name2">Course name</string>
    <string name="status">Status</string>
    <string name="notes">Notes</string>
    <string name="mentor_name">Mentor Name</string>
    <string name="mentor_name2">Mentor name</string>
    <string name="phone_number">Phone Number</string>
    <string name="_8888888888">8888888888</string>
    <string name="email_address">Email Address</string>
    <string name="erees_wgu_edu">erees@wgu.edu</string>
    <string name="term_name">Term Name</string>
    <string name="term_name2">Term name</string>
    <string name="assessment_start">Assessment Start</string>
    <string name="assessment_end">Assessment End</string>
    <string name="course_start">Course Start</string>
    <string name="course_end">Course End</string>
    <string name="share_notes">Share Notes</string>
    <string name="assessments">Assessments</string>
    <string name="add_assessment">Add Assessment</string>
    <string name="mentors">Mentors</string>
    <string name="add_mentor">Add Mentor</string>
    <string name="update">Update</string>
    <string name="wgu_mobile_app">WGU Mobile App</string>
    <string name="todo">todo</string>
    <string name="enter">Enter</string>
    <string name="terms">Terms</string>
    <string name="add_term">Add Term</string>
    <string name="term_start">Term Start</string>
    <string name="term_end">Term End</string>
    <string name="courses">Courses</string>
    <string name="add_course">Add Course</string>
    <string name="home">Home</string>
    <string name="edit_assessment">Edit Assessment</string>
    <string name="delete_assessment">Delete Assessment</string>
    <string name="edit_course">Edit Course</string>
    <string name="delete_course">Delete Course</string>
    <string name="edit_mentor">Edit Mentor</string>
    <string name="delete_mentor">Delete Mentor</string>
    <string name="edit_term">Edit Term</string>
    <string name="delete_term">Delete Term</string>

    <string-array name="status_array">
        <item>In Progress</item>
        <item>Completed</item>
        <item>Dropped</item>
        <item>Plan to Take</item>
    </string-array>

    <string-array name="type_array">
        <item>Objective</item>
        <item>Performance</item>
    </string-array>

</resources>