<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".OldUI.AddAssessmentActivity">

        <TextView
            android:id="@+id/txt_addAssessmentName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:text="@string/assessment_name"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/eTxt_addAssessmentName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:background="@android:drawable/editbox_background"
            android:hint="@string/assessment_name2"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/txt_addAssessmentName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_addType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:text="@string/type"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/eTxt_addAssessmentName" />

        <Spinner
            android:id="@+id/spn_addType"
            android:layout_width="150dp"
            android:layout_height="25dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="@+id/txt_addType"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/eTxt_addAssessmentName" />

        <TextView
            android:id="@+id/txt_addAssessmentStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:text="@string/start_date"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_addType" />

        <TextView
            android:id="@+id/eDate_addAssessmentStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:background="@android:drawable/editbox_background"
            android:clickable="true"
            android:hint="@string/select_start_date"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/txt_addAssessmentStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/spn_addType" />

        <TextView
            android:id="@+id/txt_addAssessmentEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:text="@string/end_date"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_addAssessmentStart" />

        <TextView
            android:id="@+id/eDate_addAssessmentEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:background="@android:drawable/editbox_background"
            android:clickable="true"
            android:hint="@string/select_end_date"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/txt_addAssessmentEnd"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/eDate_addAssessmentStart" />

        <Button
            android:id="@+id/btn_addAssessment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:text="@string/add"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_addAssessmentEnd" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>